# bgl2

./: .gitignore  Cargo.toml  README.md
assets/shaders/: agx.glsl  arena_mat.frag  arena_mat.vert  custom_material.frag  custom_pbr_material.frag  custom_pbr_material.vert  haze_material.frag  haze_material.vert  math.glsl  npr_std_mat.frag  npr_std_mat.vert  pbr.glsl  pbr_std_mat.frag  shadow_sampling.glsl  std_mat.vert  std_mat_bindings.glsl  temple_mat.vert  tri.vert
examples/: arena.rs  custom_material.rs  custom_material.vert  custom_pbr_material.rs  egui.rs  load_gltf.rs  npr_std_mat.frag  npr_std_mat.vert  reflection_plane.rs  san_miguel.rs  shadow_sampling.glsl  skinned_animation.rs  temple.rs  tri.frag  triangle.rs  triangle_threaded.rs
src/: bevy_standard_lighting.rs  bevy_standard_material.rs  command_encoder.rs  egui_plugin.rs  faststack.rs  lib.rs  macos_compat.rs  main.rs  mesh_util.rs  phase_opaque.rs  phase_shadow.rs  phase_transparent.rs  plane_reflect.rs  prepare_image.rs  prepare_joints.rs  prepare_mesh.rs  render.rs  uniform_slot_builder.rs  unifrom_slot_builder.rs  watchers.rs
src/shaders/: agx.glsl  math.glsl  pbr.glsl  pbr_std_mat.frag  shadow_sampling.glsl  standard_pbr_lighting.glsl  std_mat.vert
uniform_set_derive/: Cargo.toml
uniform_set_derive/src/: lib.rs
