[package]
name = "bevy_opengl"
version = "0.1.0"
edition = "2024"


[dependencies]
uniform_set_derive = { path = "uniform_set_derive" }
bevy = { version = "0.18.0", default-features = false, features = [
    "default_app",
    "common_api",
    "bevy_gltf",
    "ktx2",
    "zstd_rust",
    "jpeg",
    "bevy_camera_controller",
    "free_camera",
    "gltf_animation",
] }
console_error_panic_hook = "0.1"


wgpu-types = "27" #Needed for bevy interop types since bevy doesn't re-export everything

egui_glow = "0.33"
bevy_egui = { git = "https://github.com/ptsd/bevy_egui", branch = "bevy-0.18", default-features = false, features = [
    "manage_clipboard",
    "open_url",
    "default_fonts",
    "bytemuck",
] }

bytemuck = "1.24"
glow = "0.16"
raw-window-handle = "0.6"
winit = "0.30"
notify = "8.2"
anyhow = "1.0"
itertools = "0.14"
shared_exponent_formats = { git = "https://github.com/DGriffin91/shared_exponent_formats", rev = "0bc593747201f121706491a4745451832086f5b0" }
fancy-regex = "0.17"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
glutin = "0.32"
glutin-winit = "0.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "Window",
] }
wasm-bindgen = { version = "0.2" }

[dev-dependencies]
# tonemapping_luts only needed to view scenes with bevy's renderer
bevy = { version = "0.18.0", default-features = false, features = ["tonemapping_luts"] }

bevy_mod_mipmap_generator = { git = "https://github.com/DGriffin91/bevy_mod_mipmap_generator" }
argh = "0.1"

[profile.release-with-debug]
inherits = "release"
debug = true

# Enable optimization in debug mode
[profile.dev]
opt-level = 3

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3

[features]
gl21pipe = []
bundle_shaders = []
